[project]
name = "valorant-matches"
version = "0.1.0"
description = "A Python application that fetches and displays match results from the Valorant Champions Tour (VCT) events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "requests==2.31.0",
    "rich==13.7.0",
    "urllib3==2.2.0",
    "lxml==5.1.0",
    "typing-extensions==4.9.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "idna==3.6",
    "soupsieve==2.5",
    "markdown-it-py==3.0.0",
    "pygments==2.17.2",
    "linkify-it-py==2.0.3",
    "mdurl==0.1.2",
    "colorlog==6.8.2",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "config.py",
    "formatter.py",
    "valorant_client.py",
    "cache.py",
    "event_discovery.py",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = ["archived"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["archived"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["valorant_client", "config", "formatter", "cache"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

